--- a/frontend/src/static/index.html
+++ b/frontend/src/static/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>miRExplore - explore your miRNAs</title>
+    <title>Aorta3D</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="static/css/style.css">
   </head>
   <body>
